* V1.9.6.1
  * Allow local widget to fetch data from cKnowledge.org (or other) website:
    https://github.com/ctuning/ck/pull/93
  * Automatically print API of redirected functions (ck <action> <module> --help)

* V1.9.6
  * fixed minor bug in "ck rm" when deleting entries only from allowed repos (for crowdsourcing)
  * fixed problem with wrong repo UID when repo is installed from zip archive
  * added flag --all to "ck zip" to archive all files including .git
  * fixed "ck add repo --zip" if zip contains Git repository (making it shared)

* V1.9.5
  * added "debug":"yes" to kernel for GitHub versions
  * fixed minor bug in detection of minimal CK kernel version
    (important since current python3-ck in official Ubunutu 17.04 is quite outdated: v1.7.2)
  * fixed tests to report the error detected by running ck.access() or equivalent
  * testfix: stop testing 3.5dev and nightly Python, but add 3.6 which everyone uses
  * improved auto-generation of a list of all modules and actions: 
    http://cKnowledge.org/shared-modules.html
  * made removal of \r in text files safer on Windows (across different Python versions)
  * added TARGET remark to all CK kernel functions to show target audience (end users vs CK kernel developers).
    Used in "ck list_kernel_functions misc".
  * improved recaching of repos (taking latest updates from .ckr.json into account)
  * blocked copying of repositories to avoid duplication of CK entries
  * added "ck python_version" to print Python version used by CK
  * now when calling ck without arguments, it will print just a short help

* V1.9.4
  * fixed minor bug when searching repo by UID when repo doesn't exist
  * added CK internal var "debug". If set to "yes", print error when CK entries are broken or ignore them (now default)
    See https://github.com/ctuning/ck-tensorflow/commit/c4ddfcde1baacf6bebb23f345735b38006be08d1#commitcomment-25230616

* V1.9.3 
  * fixed issue #80 (adding zip repo if starts with ~)