@@ -1,7 +1,8 @@
 * V1.9.6.1
-  * Allow local widget to fetch data from cKnowledge.org (or other) website:
+  * allowed local widget to fetch data from cKnowledge.org (or other) website:
     https://github.com/ctuning/ck/pull/93
-  * Automatically print API of redirected functions (ck <action> <module> --help)
+  * automatically print API of redirected functions (ck <action> <module> --help)
+  * improved module API printing
 
 * V1.9.6
   * fixed minor bug in "ck rm" when deleting entries only from allowed repos (for crowdsourcing)
